iconsdatadir = $(datarootdir)/icons/hicolor
icons16dir = $(iconsdatadir)/16x16/apps
icons22dir = $(iconsdatadir)/22x22/apps
icons24dir = $(iconsdatadir)/24x24/apps
icons32dir = $(iconsdatadir)/32x32/apps
icons48dir = $(iconsdatadir)/48x48/apps
iconsscalabledir = $(iconsdatadir)/scalable/apps

dist_icons16_DATA = icons/16x16/audacity.png
dist_icons22_DATA = icons/22x22/audacity.png
dist_icons24_DATA = icons/24x24/audacity.png
dist_icons32_DATA = icons/32x32/audacity.png
dist_icons48_DATA = icons/48x48/audacity.png
dist_iconsscalable_DATA = audacity.svg

pixmapdir = $(datarootdir)/pixmaps
dist_pixmap_DATA = \
   gnome-mime-application-x-audacity-project.xpm \
   icons/16x16/audacity16.xpm \
   icons/32x32/audacity32.xpm \
   $(NULL)

pixmap_DATA = icons/48x48/audacity.xpm

EXTRA_DIST = \
	Cursors16/DisabledCursor.xpm \
	Cursors16/DrawCursor.xpm \
	Cursors16/EnvCursor.xpm \
	Cursors16/IBeamCursor.xpm \
	Cursors16/LabelCursorLeft.xpm \
	Cursors16/LabelCursorRight.xpm \
	Cursors16/StretchCursor.xpm \
	Cursors16/StretchLeftCursor.xpm \
	Cursors16/StretchRightCursor.xpm \
	Cursors16/TimeCursor.xpm \
	Cursors16/ZoomInCursor.xpm \
	Cursors16/ZoomOutCursor.xpm \
	Cursors32/DisabledCursor.xpm \
	Cursors32/DrawCursor.xpm \
	Cursors32/EnvCursor.xpm \
	Cursors32/IBeamCursor.xpm \
	Cursors32/LabelCursorLeft.xpm \
	Cursors32/LabelCursorRight.xpm \
	Cursors32/StretchCursor.xpm \
	Cursors32/StretchLeftCursor.xpm \
	Cursors32/StretchRightCursor.xpm \
	Cursors32/TimeCursor.xpm \
	Cursors32/ZoomInCursor.xpm \
	Cursors32/ZoomOutCursor.xpm \
	MusicalInstruments/acoustic_guitar_gtr.xpm \
	MusicalInstruments/acoustic_piano_pno.xpm \
	MusicalInstruments/back_vocal_bg_vox.xpm \
	MusicalInstruments/clap.xpm \
	MusicalInstruments/drums_dr.xpm \
	MusicalInstruments/_default_instrument.xpm \
	MusicalInstruments/electric_bass_guitar_bs_gtr.xpm \
	MusicalInstruments/electric_guitar_gtr.xpm \
	MusicalInstruments/electric_piano_pno_key.xpm \
	MusicalInstruments/kick.xpm \
	MusicalInstruments/loop.xpm \
	MusicalInstruments/organ_org.xpm \
	MusicalInstruments/perc.xpm \
	MusicalInstruments/sax.xpm \
	MusicalInstruments/snare.xpm \
	MusicalInstruments/string_violin_cello.xpm \
	MusicalInstruments/synth.xpm \
	MusicalInstruments/tambo.xpm \
	MusicalInstruments/trumpet_horn.xpm \
	MusicalInstruments/turntable.xpm \
	MusicalInstruments/vibraphone_vibes.xpm \
	MusicalInstruments/vocal_vox.xpm \
	Arrow.xpm \
	AudacityLogo48x48.xpm \
	AudacityLogoAlpha.xpm \
	AudacityLogoWithName.xpm \
	Cursors.h \
	MusicalInstruments.h \
	SliderThumbAlpha.xpm \
	SliderThumbDisabled.xpm \
	SliderThumb_Vertical.xpm \
	SliderThumb_VerticalAlpha.xpm \
	SliderThumb_VerticalDisabled.xpm \
	$(NULL)
